<resources>
    <string name="app_name">PlzSaveMoney</string>
    <string name="main_app_name">가계부 - 0.1A</string>
    <string name="main_monthUsedMoney">월 사용 금액</string>
    <string name="main_thisMonth">이번 달</string>
    <string name="main_nextMonth">다음 달</string>
    <string name="nextMonthText">결제 예정 입니다</string>
    <string name="exampleMoney">000,000,000원</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>