<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/mainBackground">


    <TextView
        android:id="@+id/main_Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_app_name"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/main_UsedMoney_Frame"/>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="220dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_Title"
        app:layout_constraintBottom_toTopOf="@id/main_CompareWithPreviousMonth_Frame"
        android:id="@+id/main_UsedMoney_Frame"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/main_frame_background"
        android:elevation="5dp">


        <TextView
            android:id="@+id/main_UsedMoney_Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_monthUsedMoney"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:layout_constraintLeft_toLeftOf="@id/main_UsedMoney_Frame"
            app:layout_constraintTop_toTopOf="@id/main_UsedMoney_Frame"
            android:layout_marginLeft="24dp"/>

        <RadioGroup
            android:id="@+id/main_RadioGroup_Month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="@id/main_UsedMoney_Title"
            app:layout_constraintRight_toRightOf="@id/main_UsedMoney_Title"
            app:layout_constraintTop_toBottomOf="@id/main_UsedMoney_Title">

            <RadioButton
                android:id="@+id/main_radioButton_thisMonth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_main_usedmoney_month_radiobutton"
                android:button="@null"
                android:text="@string/main_thisMonth"
                android:textAlignment="center"
                android:textColor="@drawable/selector_main_usedmoney_month_text" />

            <RadioButton
                android:id="@+id/main_radioButton_nextMonth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:background="@drawable/selector_main_usedmoney_month_radiobutton"
                android:button="@null"
                android:text="@string/main_nextMonth"
                android:textAlignment="center"
                android:textColor="@drawable/selector_main_usedmoney_month_text" />

        </RadioGroup>

        <TextView
            android:id="@+id/main_UsedMoney_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="000,000,000원"
            app:layout_constraintTop_toBottomOf="@id/main_RadioGroup_Month"
            app:layout_constraintBottom_toBottomOf="@id/main_UsedMoney_Frame"
            app:layout_constraintLeft_toLeftOf="@id/main_UsedMoney_Frame"
            app:layout_constraintRight_toRightOf="@id/main_UsedMoney_Frame"
            android:textSize="35sp"
            android:layout_marginBottom="30dp"/>

        <TextView
            android:id="@+id/nextMonthText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nextMonthText"
            app:layout_constraintTop_toBottomOf="@id/main_UsedMoney_text"
            app:layout_constraintLeft_toLeftOf="@id/main_UsedMoney_Frame"
            app:layout_constraintRight_toRightOf="@id/main_UsedMoney_Frame"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="220dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_UsedMoney_Frame"
        android:id="@+id/main_CompareWithPreviousMonth_Frame"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/main_frame_background"
        android:elevation="5dp">


        <TextView
            android:id="@+id/tempText1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="전 주와 사용금액 비교(월요일 00시 초기화)"
            app:layout_constraintTop_toTopOf="@id/main_CompareWithPreviousMonth_Frame"
            app:layout_constraintBottom_toBottomOf="@id/main_CompareWithPreviousMonth_Frame"
            app:layout_constraintLeft_toLeftOf="@id/main_CompareWithPreviousMonth_Frame"
            app:layout_constraintRight_toRightOf="@id/main_CompareWithPreviousMonth_Frame"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>